--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,12 @@
             <version>1.9.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+
     </dependencies>
 
     <build>
