--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,12 @@
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
@@ -183,6 +189,12 @@
             <id>prod</id>
             <properties>
                 <profileActive>prod</profileActive>
+            </properties>
+        </profile>
+        <profile>
+            <id>beta</id>
+            <properties>
+                <profileActive>beta</profileActive>
             </properties>
         </profile>
     </profiles>
