--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
                 <artifactId>okhttp</artifactId>
                 <version>3.0.1</version>
             </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.47</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -187,6 +192,12 @@
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+
 
     </dependencies>
 
