--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,10 @@
             <artifactId>logback-classic</artifactId>
         </dependency>
         <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
         </dependency>
@@ -191,8 +195,6 @@
             <artifactId>poi</artifactId>
             <version>3.10-FINAL</version>
         </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-redis -->
 
         <dependency>
             <groupId>org.springframework.data</groupId>
