--- a/pom.xml
+++ b/pom.xml
@@ -210,8 +210,12 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
         </dependency>
-
-
+        <!-- 这个版本写在jvm启动 不要随便改-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+            <version>2.10.2</version>
+        </dependency>
     </dependencies>
 
     <profiles>
