--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>cn.hkxj</groupId>
     <artifactId>platform</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <name>platform</name>
     <description>Demo project for Spring Boot</description>
