--- a/pom.xml
+++ b/pom.xml
@@ -66,13 +66,14 @@
             <dependency>
                 <groupId>com.squareup.okhttp3</groupId>
                 <artifactId>okhttp</artifactId>
-                <version>3.0.1</version>
+                <version>4.0.0</version>
             </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
                 <version>1.2.47</version>
             </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -239,6 +240,14 @@
             <artifactId>transmittable-thread-local</artifactId>
             <version>2.10.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp-urlconnection</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <profiles>
