--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,6 @@
                 <version>1.1.1</version>
             </dependency>
 
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-web</artifactId>
-                <version>5.0.5.RELEASE</version>
-            </dependency>
 
             <dependency>
                 <groupId>com.github.binarywang</groupId>
@@ -119,7 +114,12 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
-        <!-- springboot 热部署 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
+    <!-- springboot 热部署 -->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -134,10 +134,6 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
